# sigmak

./: .flake8  .gitignore  .gitmessage  ASYNC_TASK_QUEUE_SUMMARY.md  Dockerfile  HURC_YoY_Risk_Analysis_2023_2025.md  JOURNAL.md  JOURNAL_PEER_PREFETCH.md  LICENSE  LLM_API_INTEGRATION_STATUS.md  PHASE2_COMPLETE.md  QUICK_START_ASYNC.md  README.md  VECTOR_CLASSIFICATION_RATIONALE.md  api_keys.json  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  runme.sh
.github/: COMMIT_MESSAGE_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
data/samples/: .gitkeep  sample_10k.html
documentation/: ARCHITECTURE.md  ASYNC_TASK_QUEUE_SUMMARY.md  QUICK_START_ASYNC.md
documentation/cli-scaffolding/: 101_CLI_ENTRY_POINT_SCAFFOLD.md  102_WIRE_YOY_SUBCOMMAND.md  103_WIRE_PEERS_SUBCOMMAND.md  104_WIRE_DOWNLOAD_SUBCOMMAND.md  105_WIRE_INSPECT_AND_RENDER.md  106_DEPRECATE_SCRIPTS.md  110_PEER_SELECTION_WITH_YFINANCE.md  114_SUBDELEGATE_TICKER.md  115_CLEAN_README.md  116_WIRE_ANALYZE_SUBCOMMAND.md  117_WIRE_BACKFILL_SUBCOMMAND.md  118_WIRE_PEER_MARKETCAP_SUBCOMMAND.md
documentation/feature-peer-comparison/: IMPROVE_PEER_COMPARISON.md  INSTRUCTIONS.md  ISSUE82_ANALYSIS_WITH_PEERS.md  ISSUE83_PEER_DOWNLOAD.md  ISSUE84_PEER_DISCOVERY.md  ISSUE89_REFINE_PEER_SELECTION.md
documentation/improve-peer-selection/: GET_PEERS_WITH_YFINANCE.md
documentation/improve-risk-assessment/: ADD_BOILERPLATE_CLASSIFICATION.md  FIX_YOY_REPORT_BUGS.md  IMPROVE_ITEM1A_EXTRACTION.md  IMPROVE_RISK_REPORTING.md  IMPROVE_SEVERITY_SCORE.md  OTHER_CLEANUP.md
prompts/: CHANGELOG.md  README.md  risk_classification_v1.txt
scripts/: analyze_filing.py  backfill_llm_cache_to_chroma.py  batch_analyze_tesla.py  demo_peer_discovery.py  diagnose_peer_selection.py  download_peers_and_target.py  generate_peer_comparison_report.py  generate_yoy_report.py  inspect_chroma.py  md_to_pdf.py  populate_peer_marketcap.py
src/sec_risk_api/: __init__.py  api.py  embeddings.py  indexing_pipeline.py  ingest.py  init_vector_db.py  processing.py  prompt_manager.py  reranking.py  risk_taxonomy.py  tasks.py
src/sigmak/: __main__.py  backfill.py  config.py  drift_detection.py  filings_db.py  indexing_pipeline.py  ingest.py  integration.py  llm_classifier.py  llm_storage.py  peer_discovery.py  peer_selection.py  prefetch_peers.py  processing.py  risk_classification_service.py  risk_classifier.py  risk_taxonomy.py  scoring.py  severity.py  text_utils.py
src/sigmak/adapters/: __init__.py  yfinance_adapter.py
src/sigmak/cli/: analyze.py  backfill.py  download.py  inspect_db.py  peer_marketcap.py  peers.py  render.py  yoy.py
src/sigmak/downloads/: __init__.py  tenk_downloader.py
src/sigmak/reports/: pdf_renderer.py  peer_report.py  yoy_report.py
styles/: README.md  report.css
tests/: conftest.py  test_api.py  test_async_task_queue.py  test_auth.py  test_chroma_infra.py  test_cli_analyze.py  test_cli_backfill.py  test_cli_download.py  test_cli_inspect.py  test_cli_peer_marketcap.py  test_cli_peers.py  test_cli_render.py  test_cli_yoy.py  test_config_loader.py  test_download_peers_and_target.py  test_embeddings.py  test_filings_db_and_report.py  test_filings_db_schema.py  test_generate_peer_comparison_misfiled.py  test_hybrid_search_reranking.py  test_indexing_pipeline.py  test_ingestion.py  test_integration_cache.py  test_integration_db_only.py  test_integration_pipeline.py  test_llm_classifier.py  test_llm_storage.py  test_main.py  test_peer_discovery.py  test_peer_discovery_examples.py  test_peer_discovery_yfinance.py  test_peer_selection.py  test_prefetch_peers.py  test_prefetch_peers_fetch_missing.py  test_processing.py  test_risk_classifier.py  test_risk_taxonomy_and_prompts.py  test_scripts_deprecated.py  test_severity.py  test_similarity_first_and_persistence.py  (+3 more)
