[project]
name = "sec-risk-api"
version = "0.1.0"
description = "Proprietary Risk Scoring API for SEC 10-K/Q filings"
readme = "README.md"
authors = [
    { name = "Peter Martinson", email = "peter.j.martinson@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "requests>=2.31.0", # You'll need this to actually fetch the EDGAR files
    "chromadb>=0.4.0",
    "pytest>=8.0.0",
    "langchain-text-splitters>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "types-requests", # Helps mypy understand requests
    "types-beautifulsoup4", # Helps mypy understand bs4
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true # Force yourself to use types for stability
ignore_missing_imports = true # Stops it from yelling about libs without type stubs
