[project]
name = "sec-risk-api"
version = "0.1.0"
description = "Proprietary Risk Scoring API for SEC 10-K/Q filings"
readme = "README.md"
authors = [
    { name = "Peter Martinson", email = "peter.j.martinson@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
    "chromadb>=0.4.0",
    "pytest>=8.0.0",
    "langchain-text-splitters>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "types-requests",
    "types-beautifulsoup4",
]

[tool.mypy]
python_version = "3.10"

# --- Global Strictness Settings ---
disallow_untyped_defs = true    # Force type hints on all functions
check_untyped_defs = true       # Check bodies of untyped functions
no_implicit_optional = true     # Force explicit Optional[X] or X | None
warn_return_any = true          # Warn when returning a value of type Any
warn_unused_configs = true      # Warn about unused config sections
warn_unused_ignores = true      # Warn about unnecessary '# type: ignore' comments

# --- Third-Party Library Overrides ---
# These libraries either don't have type stubs or have incomplete ones.
# We silence 'missing import' errors specifically for these modules.
[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "bs4.*",
    "langchain_text_splitters.*",
    "lxml.*"
]
ignore_missing_imports = true
